[project]
name = "pitop"
version = "0.1.0"
description = "An app to serve top cpu processes as a webpage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.7",
    "fastapi>=0.115.5",
    "jinja2>=3.1.4",
    "psutil>=6.1.0",
    "ruff>=0.8.0",
    "uvicorn>=0.32.1",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
