[project]
name = "pitop"
version = "0.2.0"
description = "A simple app to display server resource usage metrics as a webpage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.7",
    "fastapi>=0.115.5",
    "jinja2>=3.1.4",
    "psutil>=6.1.0",
    "ruff>=0.8.0",
    "uvicorn>=0.32.1",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
